# 569x_AI_AB281GA

./: .gitattributes  .gitignore  README.md
AB5691_SDK/: .gitignore
AB5691_SDK/app/platform/libs/net/: CMakeLists.txt  CMakePresets.json
AB5691_SDK/app/platform/libs/net/include/common/: net_heap.h  net_libc.h  version.h
AB5691_SDK/app/platform/libs/net/include/lwip/ports/: lwipopts.h
AB5691_SDK/app/platform/libs/net/include/lwip/ports/arch/: cc.h  sys_arch.h
AB5691_SDK/app/platform/libs/net/include/nopoll/: nopoll_config.h  nopoll_decl.h  nopoll_io.h  nopoll_listener.h  nopoll_log.h  nopoll_rtthread.h
AB5691_SDK/app/platform/libs/net/include/os/: os_api.h
AB5691_SDK/app/platform/libs/net/include/tinycrypt/: tiny_sha2.h  tinycrypt.h  tinycrypt_config.h
AB5691_SDK/app/platform/libs/net/modules/cjson/: cJSON.c
AB5691_SDK/app/platform/libs/net/modules/common/: CMakeLIsts.txt  buildinfo.c  version.h.cmake.in
AB5691_SDK/app/platform/libs/net/modules/lwip/: CMakeLists.txt
AB5691_SDK/app/platform/libs/net/modules/lwip/contrib/: Filelists.cmake
AB5691_SDK/app/platform/libs/net/modules/lwip/contrib/apps/http/: http_client_img.c
AB5691_SDK/app/platform/libs/net/modules/lwip/contrib/ports/: CMakeCommon.cmake  bnep_lwip.c
AB5691_SDK/app/platform/libs/net/modules/lwip/src/core/: memp.c
AB5691_SDK/app/platform/libs/net/modules/lwip/src/core/ipv4/: ip4_frag.c
AB5691_SDK/app/platform/libs/net/modules/lwip/src/core/ipv6/: ip6_frag.c
AB5691_SDK/app/platform/libs/net/modules/nopoll/: CMakeLists.txt  nopoll.c  nopoll_client.c  nopoll_conn.c  nopoll_log.c  nopoll_rtthread.c
AB5691_SDK/app/platform/libs/net/modules/webclient/samples/: webclient_get_sample.c
AB5691_SDK/app/platform/libs/net/modules/webclient/src/: webclient.c
AB5691_SDK/ute/doc/: AB5681_flash_map.xlsx
AB5691_SDK/ute/flashmap/: ute_flash_64mbit_1280K_map.h
AB5691_SDK/ute/project_config/: ute_project_config_ab281.h  (+1 more)
tools/: AB OTA Demo.apk  AB5690-YCY(EA15).key  CP210x_Windows_Drivers.rar
tools/AStyle/: copy.bat  pre-commit
tools/表盘工具/: 表盘工具v1.0.3.4.7z
ute/application/: ute_application_common.c  ute_application_common.h
ute/flashmap/: ute_flash_128mbit_1280K_map.h  ute_flash_128mbit_1380K_map.h  ute_flash_64mbit_1024k_map.h  ute_flash_64mbit_1280K_map.h  ute_flash_map_common.h
ute/language/: ute_language_common.c  ute_language_common.h
ute/lib/: ute_step_int_algorithms_common.h
ute/project_config/: ute_project_config.h  ute_project_config_ab281.h  ute_project_config_ab281a.h  ute_project_config_ab281ab.h  ute_project_config_ab281ac.h  ute_project_config_ab281ad.h  ute_project_config_ab281ae.h  ute_project_config_ab281af.h  ute_project_config_ab281ag.h  ute_project_config_ab281b.h  ute_project_config_ab281c.h  ute_project_config_ab281d.h  ute_project_config_ab281da.h  ute_project_config_ab281db.h  ute_project_config_ab281dc.h  ute_project_config_ab281dd.h  ute_project_config_ab281de.h  ute_project_config_ab281e.h  ute_project_config_ab281ea.h  ute_project_config_ab281f.h  ute_project_config_ab281fa.h  ute_project_config_ab281g.h  ute_project_config_ab281ga.h  ute_project_config_ab281h.h  ute_project_config_ab281j.h  ute_project_config_ab281ja.h  ute_project_config_ab281jb.h  ute_project_config_ab281k.h  ute_project_config_ab281ka.h  ute_project_config_ab281l.h  ute_project_config_ab281m.h  ute_project_config_ab281n.h  ute_project_config_abe012.h  ute_project_config_abe013.h  ute_project_config_abf012.h
ute/task/: ute_task_application.c  ute_task_application.h
ute/ui_config_patch/: build_cpy_res.py
(+1772 files in other folders)
